Add docs, integration, monitoring, tests
Large feature commit adding project documentation, integration services, monitoring, benchmarks, and tests. Added detailed docs (API_REFERENCE, ARCHITECTURE, DEPLOYMENT, GOVERNANCE, MEMORY_BUS), Prometheus/Grafana monitoring configs and alerts, and example .env entries for new API keys. Introduced integration modules (memory_decay, hebbian_sync, sandbox, postal_service, trust_interface, memory_client, context_loader) plus governance helpers (rollback, self_update) and a Kernel memory_bus implementation. Added benchmark suite, many new integration and integration tests, test harness files, and initial web/frontend tweaks and middleware updates. Also updated project config files (pyproject.toml, pytest.ini, requirements) and included a modified state_kernel.json.

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ pythonpath =
     src
 markers =
     integration: integration tests
+addopts = --cov=. --cov-report=markdown --cov-report=term-missing
