--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "artemis-city"
+name = "AgenticGovernance-ArtemisCity"
 version = "0.3.0"
 description = "Architectural framework for agentic reasoning with transparent, accountable action across distributed intelligence systems"
-readme = "README.md"
-requires-python = ">=3.8"
+readme = "README"
+requires-python = ">=3.10"
 
 authors = [{name = "Prinston Palmer", email = "prinstonpalmer879@gmail.com"}]
 license = {text = "MIT"}
@@ -15,9 +15,6 @@ classifiers = [
   "Intended Audience :: Education",
   "Intended Audience :: Science/Research",
   "License :: OSI Approved :: MIT License",
-  "Programming Language :: Python :: 3",
-  "Programming Language :: Python :: 3.8",
-  "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
@@ -55,32 +52,24 @@ enhanced = [
 [project.urls]
 Homepage = "https://www.artemiscity.com"
 Documentation = "https://github.com/popvilla/artemis-city#readme"
-Repository = "https://github.com/popvilla/artemis-city"
+Repository = "https://github.com/AgenticGovernace/AgenticGovernance-ArtemisCity"
 Changelog = "https://github.com/popvilla/artemis-city/releases"
-Issues = "https://github.com/popvilla/artemis-city/issues"
-Discussion = "https://github.com/popvilla/artemis-city/discussions"
-Funding = "https://github.com/sponsors/popvilla"
+Issues = "https://github.com/AgenticGovernace/AgenticGovernance-ArtemisCity/issues"
+Discussion = "https://github.com/AgenticGovernace/AgenticGovernance-ArtemisCity/discussions"
 
 [project.scripts]
-artemis-cli = "interface.Artemis_cli:main"
+artemis-cli = "src.Kernel.artemis_cli.py"
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["npm"]
+build-backend = "npm run build"
 
 [tool.black]
 line-length = 100
 target-version = ['py38']
 include = '\.pyi?$'
-skip-string-normalization = true
-exclude = '''
-/(
-    \.git
-  | \.venv
-  | build
-  | dist
-)/
-'''
+skip-string-normalization = false
+exclude = ""
 
 [tool.isort]
 profile = "black"
@@ -88,5 +77,5 @@ line_length = 100
 
 [tool.pytest.ini_options]
 addopts = "-ra -q --strict-markers"
-testpaths = ["tests"]
-pythonpath = ["."]
+testpaths = ["./tests"]
+pythonpath = ["./.venv"]
