--- a/web/api/package.json
+++ b/web/api/package.json
@@ -1,17 +1,40 @@
 {
-  "name": "mcp-obsidian-system-root",
+  "name": "artemis-city-api",
   "version": "1.0.0",
-  "description": "Root package for MCP Obsidian System with Web UI",
-  "main": "index.js",
+  "description": "REST API for Artemis City - Agent orchestration and memory management",
+  "main": "dist/index.js",
   "scripts": {
-    "start": "concurrently \"cd web/frontend && npm run dev\" \"uvicorn web.api.main:app --reload --port 8000\"",
-    "install-frontend": "cd web/frontend && npm install",
-    "build-frontend": "cd web/frontend && npm run build"
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "dev": "ts-node-dev --respawn --transpile-only index.ts",
+    "test": "jest",
+    "lint": "eslint . --ext .ts",
+    "clean": "rm -rf dist"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "helmet": "^7.1.0",
+    "morgan": "^1.10.0"
+  },
   "devDependencies": {
-    "concurrently": "^8.2.2"
-  }
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
+    "@types/node": "^20.10.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.0"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [
+    "artemis-city",
+    "agents",
+    "api",
+    "atp",
+    "memory-bus"
+  ],
+  "author": "Prinston (Apollo) Palmer",
+  "license": "Apache 2.0"
 }
