--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,6 @@ docker-compose.override.yml
 *.log
 *.tmp
 .cache/
+.output.txt
+.devcontainer/python_typescript/devcontainer.json
+.ai/mcp/mcp.json
