--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
-# 
 # --- Environment & Secrets ---
-.gitignore
 .env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
 .env.production
 .env.staging
 *.pem
@@ -31,50 +32,66 @@ build/
 .venv/
 venv/
 env/
+ENV/
+env.bak/
+venv.bak/
 .Python
+.ipynb_checkpoints/
+.mypy_cache/
+.pyre/
+.pytest_cache/
+.tox/
+.nox/
+.coverage
+.coverage.*
+htmlcov/
+coverage.xml
+*.sqlite3
+celerybeat-schedule
+celerybeat.pid
 
-# --- Node.js ---
+# --- Node.js & Web ---
 node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.npm
+pnpm-debug.log*
+.npm/
 .yarn-integrity
-
-# --- Build Artifacts ---
-web/api/dist/
-web/frontend/dist/
 *.js.map
 *.d.ts.map
+web/api/dist/
+web/frontend/dist/
+dist-ssr/
+.eslintcache
 
-# --- IDE & Editor ---
+# --- IDEs & Editors ---
 .vscode/
 .idea/
+.fleet/
 *.swp
 *.swo
 *~
-.DS_Store
 Thumbs.db
-
-# --- Testing & Coverage ---
-.coverage
-htmlcov/
-.pytest_cache/
-.tox/
-.nox/
+.cache/
 
 # --- OS Files ---
 .DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
 *.orig
 *.bak
 
 # --- Docker ---
 docker-compose.override.yml
 
-# --- Misc ---
+# --- Misc & Tools ---
 *.log
 *.tmp
-.cache/
 .output.txt
 .devcontainer/python_typescript/devcontainer.json
 .ai/mcp/mcp.json
