Add GitHub workflows, issue templates, dependabot
Add GitHub Actions workflows for CI and release: code-quality, dependencies, jekyll-gh-pages, and release (build, publish, optional Docker). Add Dependabot configuration to scan npm and pip weekly. Add issue templates (bug_report, feature_request, custom) and an empty .github/instructions file. Update .gitignore to ignore Concept_Demos/.vercel. These changes onboard automated testing, static analysis, dependency/security scanning with automated issue creation, and deployment/release automation.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ docker-compose.override.yml
 *.db
 Concept_Demos/logs/run_20260223_030438.md
 Concept_Demos/logs/run_20260223_030141.md
+/Concept_Demos/.vercel
