Sanitize and standardize orchestrator logging
Add a _sanitize_for_log helper across orchestrator modules and replace f-string logs with structured logger calls that use placeholders and sanitized values. Improve error logging by passing exc_info for tracebacks, normalize single-line printable log output, and standardize numeric/percentage formatting in Hebbian stats. Also update package.json with scripts and dependency/devDependency entries to support dev tooling, and expand .gitignore to cover CI templates, R artifacts, logs and other project files.

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,14 @@ docker-compose.override.yml
 *.db
 Concept_Demos/logs/run_20260223_030438.md
 Concept_Demos/logs/run_20260223_030141.md
+/Concept_Demos/.vercel
+.github/ISSUE_TEMPLATE/custom.md
+.github/ISSUE_TEMPLATE/bug_report.md
+.github/ISSUE_TEMPLATE/feature_request.md
+.github/instructions/.instructions.md
+.github/workflows/release.yml
+.Rproj.user
+*.Rproj
+/Concept_Demos/logs
+coverage.md
+.Rhistory
