--- a/package.json
+++ b/package.json
@@ -1,8 +1,35 @@
 {
-  "name": "AgenticGovernance-ArtemisCity",
-  "version": "1.0.0",
-  "main": "index.js",
-  "repository": "git@github.com:AgenticGovernace/AgenticGovernance-ArtemisCity.git",
-  "author": "Prinston Palmer <prinston@artemiscity.com>",
-  "license": "MIT"
+"name": "AgenticGovernance-ArtemisCity",
+"version": "1.0.0",
+"main": "index.js",
+"repository": "git@github.com:AgenticGovernace/AgenticGovernance-ArtemisCity.git",
+"author": "Prinston Palmer <prinston@artemiscity.com>",
+
+"scripts": {
+"start": "node app/launch/main.js",
+"dev": "nodemon app/launch/main.js",
+"build": "tsc -p app/launch/tsconfig.json",
+"lint": "eslint . --ext .ts",
+"test": "echo \"Error: no test specified\" && exit 1  "
+},
+"dependencies": {
+"@types/node": "^20.12.7",
+"@types/express": "^4.17.21",
+"@types/cors": "^2.8.17",
+"express": "^4.19.2",
+"cors": "^2.8.5",
+"dotenv": "^16.4.5",
+"axios": "^1.6.8",
+"typescript": "^5.4.5",
+
+
+},
+"devDependencies": {
+"@typescript-eslint/eslint-plugin": "^7.6.0",
+"@typescript-eslint/parser": "^7.6.0",
+"eslint": "^8.57.0",
+"nodemon": "^3.1.0",
+"ts-node": "^10.9.2",
+"typescript": "^5.4.5"
+}
 }
